@@ -10,9 +10,9 @@
 **********************************************************************/
 
 #undef RUBY_EXPORT
-#include "ruby.h"
-#include "debug.h"
+
 #include "ruby/vm.h"
+
 #ifdef HAVE_LOCALE_H
 #include <locale.h>
 #endif
