@@ -443,7 +443,7 @@ native_cond_destroy(rb_thread_cond_t *cond)
 }
 
 void
-ruby_init_stack(volatile VALUE *addr)
+ruby_init_stack(volatile void *addr)
 {
 }
 
